--- a/WorkflowLauncher/WorkflowLauncher/WorkflowLauncher.csproj
+++ b/WorkflowLauncher/WorkflowLauncher/WorkflowLauncher.csproj
@@ -6,8 +6,11 @@
         <Nullable>enable</Nullable>
         <UseWindowsForms>true</UseWindowsForms>
         <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>WorkflowLauncherGuid</UserSecretsId>
-  </PropertyGroup>
+        <UserSecretsId>WorkflowLauncherGuid</UserSecretsId>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <SupportedOSPlatformVersion>6.1</SupportedOSPlatformVersion>
+        <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore" Version="2.3.0" />
