added: Logger.cs for logging purposes (not used much yet) changed: Logger being static now guarantees that log.txt files are created on startup

--- a/WorkflowLauncher/ContextMenu/ContextMenu.csproj
+++ b/WorkflowLauncher/ContextMenu/ContextMenu.csproj
@@ -18,5 +18,6 @@
       <HintPath>..\packages\SharpShell.2.7.2\lib\net40\SharpShell.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Compile Include="..\Shared\Logger.cs"/>
   </ItemGroup>
 </Project>
